<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_setting_standart_namecity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_setting_standart_namecity"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_setting_standart_namecity"
        >

        <EditText
            android:id="@+id/et_settings_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_name"
        >

        <EditText
            android:id="@+id/et_settings_city"
            android:layout_width="match_parent" android:inputType=""
            android:layout_height="wrap_content"
            android:hint="@string/city"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/b_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_city"
        android:text="@string/button_ok"
        />
</android.support.constraint.ConstraintLayout>